# Coffee-CLI

./: .cnb.yml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_PROGRESS.md  NOTICE  README.md  TRADEMARKS.md  build.rs  claude_help.txt  claude_help_utf8.txt  free-code-ipfs.tar  run-dev-release.bat  run-dev.bat  tauri.conf.json  trace_translation.txt
.github/workflows/: bump-version-json.yml  debug-mac.yml  release.yml  verify-mac.yml
Web-Home/: _worker.js  agent-tools-installer.ps1  agent-tools-installer.sh  baidu_verify_codeva-0dIsEZQyMQ.html  index.html  install.ps1  install.sh  v2-preview.html  version.json
capabilities/: default.json
cnb-deploy/: .cnb.yml  COFFEE_DESIGN_SYSTEM.md
docs/: MULTI-AGENT-ARCHITECTURE.md  TERMINAL-IME-COMPETITOR-ANALYSIS.md  VIBEID-DESIGN.md
icons/: icon.icns
install/: install.ps1  install.sh
language-packs/: README.md
reference/: README.md
scripts/: agent-tools-installer.ps1  agent-tools-installer.sh  build-free-code.sh  build-release.ps1  coffee-cli-codex-notify.py  coffee-cli-hermes-plugin.py  coffee-cli-hook.py  coffee-cli-opencode-plugin.js  fetch-icon-themes.mjs  install.ps1  rename.cjs
src/: agent_mcp_config.rs  bin_test.rs  cli.rs  config.rs  fs_watcher.rs  git_intel.rs  hook_installer.rs  hook_server.rs  main.rs  mcp_injector.rs  mcp_server.rs  multi_agent_protocol.rs  scanner.rs  server.rs  skills.rs  terminal.rs  translation.rs  translation.rs_test_append  watcher.rs  workstation.rs
src-ui/: gen-icon.mjs  index.html  island.html  package-lock.json  package.json  vite.config.ts
(+228 files in other folders)
