[package]
name = "coffee-cli"
version = "0.4.0"
edition = "2021"
description = "Lightweight Multi-layer AI CLI Terminal"
license = "MIT"
repository = "https://github.com/edison7009/Coffee-CLI"
keywords = ["ai", "prompt", "coding", "llm", "tree-sitter"]
categories = ["command-line-utilities", "development-tools"]
build = "build.rs"

[[bin]]
name = "coffee-cli"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tier Terminal — PTY (portable-pty, WezTerm's cross-platform PTY library)
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }

# Regex (used by terminal.rs for ANSI strip)
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Tauri
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"

# Directory scanning (.gitignore aware, same engine as ripgrep)
ignore = "0.4"

# Utility libraries
# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

log = "0.4"
dirs = "5"
image = "0.25.10"
base64 = "0.22.1"
git2 = "0.19"
notify = "6.1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
